# Generated by scripts/gerar-fluxos-e2e.cjs; seed 123456789.
appId: br.com.mhvtech.trincamania.e2e
---
- tapOn:
    id: 'board-tile-w1-002-1'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-3'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-6'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-2'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-5'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-8'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-4'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-10'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-11'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-7'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-9'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-002-12'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'Vitória'
    timeout: 15000
