# Generated by scripts/gerar-fluxos-e2e.cjs; seed 123456789.
appId: br.com.mhvtech.trincamania.e2e
---
- tapOn:
    id: 'board-tile-w1-003-1'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-3'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-6'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-2'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-5'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-8'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-4'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-10'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-11'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-7'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-9'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-003-12'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'Vitória'
    timeout: 15000
