# Generated by scripts/gerar-fluxos-e2e.cjs; seed 123456789.
appId: br.com.mhvtech.trincamania.e2e
---
- tapOn:
    id: 'board-tile-w1-004-7'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-13'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-15'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-1'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-3'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-11'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-2'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-4'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-12'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-10'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-14'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-6'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-5'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-8'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-004-9'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'Vitória'
    timeout: 15000
