# Generated by scripts/gerar-fluxos-e2e.cjs; seed 123456789.
appId: br.com.mhvtech.trincamania.e2e
---
- tapOn:
    id: 'board-tile-w1-005-13'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-16'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-18'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-2'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-4'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-15'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-3'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-11'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-12'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-1'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-14'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-5'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-7'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-9'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-10'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-8'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-17'
- waitForAnimationToEnd
- tapOn:
    id: 'board-tile-w1-005-6'
- waitForAnimationToEnd
- assertVisible: 'Baú desbloqueado!'
- tapOn: 'Coletar'
- extendedWaitUntil:
    visible: 'Vitória'
    timeout: 15000
